--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "^4.18.2",
     "express-useragent": "^1.0.15",
     "fs": "^0.0.1-security",
+    "http": "^0.0.1-security",
+    "http-errors": "^2.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
