--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
     "chalk": "~4.1.2",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-useragent": "^1.0.15",
