--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "http-errors": "^2.0.0",
+    "moment-timezone": "^0.5.43",
     "morgan": "^1.10.0",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.21",
